[gd_scene load_steps=23 format=3 uid="uid://bi6255tx4u0jr"]

[ext_resource type="Script" path="res://modules/entities/enemies/shades/shade.gd" id="1_0ppdu"]
[ext_resource type="Script" path="res://addons/xsm/state.gd" id="2_81f8r"]
[ext_resource type="Script" path="res://modules/entities/enemies/shades/shade/xsm/roaming.gd" id="3_vol8a"]
[ext_resource type="Script" path="res://modules/entities/enemies/shades/ranged_shade/charge_attack.gd" id="4_t3lex"]
[ext_resource type="Script" path="res://modules/entities/enemies/shades/ranged_shade/ranged_attack.gd" id="5_q5uxu"]
[ext_resource type="Script" path="res://modules/entities/enemies/shades/shade/xsm/stunned.gd" id="6_6q11h"]
[ext_resource type="PackedScene" uid="uid://b5wr1t2eeb2u0" path="res://modules/entities/enemies/shades/ranged_shade/shade_projectile.tscn" id="6_23k0m"]
[ext_resource type="Script" path="res://modules/entities/enemies/shades/shade/xsm/dead.gd" id="7_cxdtl"]
[ext_resource type="Script" path="res://addons/basecomponents/Components/health_component.gd" id="8_2cjjq"]
[ext_resource type="Script" path="res://addons/basecomponents/Components/2D/hurtbox_component_2d.gd" id="9_5uvqb"]
[ext_resource type="Script" path="res://addons/basecomponents/Components/2D/hitbox_component_2d.gd" id="10_o57fr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0xhyh"]
radius = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_56qhg"]
radius = 8.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xa74g"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_54508"]
radius = 15.0

[sub_resource type="Animation" id="Animation_0nojc"]
resource_name = "Melee"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBoxComponent2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_6qj3b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBoxComponent2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtBoxComponent2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_741tg"]
resource_name = "Stunned"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtBoxComponent2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1um1b"]
_data = {
"Melee": SubResource("Animation_0nojc"),
"RESET": SubResource("Animation_6qj3b"),
"Stunned": SubResource("Animation_741tg")
}

[sub_resource type="Curve" id="Curve_ne7pj"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.479661), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_8rhcx"]
colors = PackedColorArray(1, 1, 1, 1, 2, 2, 2, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_so1fn"]
radius = 12.0

[node name="RangedShade" type="CharacterBody2D" groups=["enemy", "saved_data", "tetherable_body"]]
z_index = 1
y_sort_enabled = true
collision_layer = 264
collision_mask = 95
motion_mode = 1
script = ExtResource("1_0ppdu")

[node name="AgroRegion" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroRegion"]
shape = SubResource("CircleShape2D_0xhyh")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AgroRegion"]
polygon = PackedVector2Array(72, 0, 70, -19, 63, -36, 51, -51, 37, -62, 18, -70, 0, -8, 0, 10, 19, 70, 36, 63, 51, 51, 63, 36, 70, 19)

[node name="RectShape" type="Polygon2D" parent="."]
y_sort_enabled = true
color = Color(3.27289e-06, 0.684495, 0.443996, 1)
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_56qhg")

[node name="ShadeFSM" type="Node" parent="."]
script = ExtResource("2_81f8r")
history_size = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="Roaming" type="Node" parent="ShadeFSM" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("3_vol8a")
nav_agent = NodePath("../../NavigationAgent2D")
movement_speed = 45.0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath(".")

[node name="Seeking" type="Node" parent="ShadeFSM"]
script = ExtResource("4_t3lex")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = true
waiting_time = 1.0
on_timer_finished = 0
next_state = NodePath("../Seeking")

[node name="Attack" type="Node" parent="ShadeFSM"]
script = ExtResource("5_q5uxu")
projectile_scene = ExtResource("6_23k0m")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = true
waiting_time = 1.0
on_timer_finished = 0
next_state = NodePath("../Seeking")

[node name="Stunned" type="Node" parent="ShadeFSM"]
script = ExtResource("6_6q11h")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "Stunned"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../Seeking")

[node name="Dead" type="Node" parent="ShadeFSM"]
script = ExtResource("7_cxdtl")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("8_2cjjq")

[node name="HurtBoxComponent2D" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 8
collision_mask = 4
script = ExtResource("9_5uvqb")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent2D"]
shape = SubResource("RectangleShape2D_xa74g")

[node name="HitBoxComponent2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource("10_o57fr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent2D"]
shape = SubResource("CircleShape2D_54508")
disabled = true
debug_color = Color(1, 0, 1, 0.262745)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1um1b")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 10.0
particle_flag_align_y = true
direction = Vector2(0, -1)
spread = 10.0
gravity = Vector2(0, -5)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
scale_amount_min = 3.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_ne7pj")
color = Color(0.488605, 0.427964, 0.528217, 1)
color_ramp = SubResource("Gradient_8rhcx")

[node name="TetherableArea2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TetherableArea2D"]
shape = SubResource("CircleShape2D_so1fn")

[connection signal="Died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="Hit" from="HurtBoxComponent2D" to="." method="_on_hurt_box_component_2d_hit"]
[connection signal="mouse_entered" from="TetherableArea2D" to="." method="_on_tetherable_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="TetherableArea2D" to="." method="_on_tetherable_area_2d_mouse_exited"]
